[java-decompiler] IDEA-264719 FernFlower - incorrect operator precedence after decompilation
-cleanup

GitOrigin-RevId: c0f5c6ef951ef8575dcfaf20fc2c3ffea5de3e2f